tests/parser/parse-let.7.bad.error
error: Malformed let binding
  --> test:5:13
   |
 5 |    (let ((x y z)) 5))
   |               ^ unexpected trailing form
