tests/parser/parse-let.7.bad.coalton
;; BAD: Parse Let
(package test-package)

(define f
  (let ((x y z)) 5))
